<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainFragment" android:id="@+id/frameLayoutMain"
                                                   android:background="@android:color/darker_gray">
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars" android:id="@+id/game1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintEnd_toStartOf="@+id/game2" android:contentDescription="@string/game1"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/game3"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars" android:id="@+id/game2"
            app:layout_constraintStart_toEndOf="@+id/game1"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/game1" app:layout_constraintTop_toTopOf="@+id/game1"
            android:contentDescription="@string/game2"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars"
            android:id="@+id/game3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/game4" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game1" android:contentDescription="@string/game3"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars"
            android:id="@+id/game4" app:layout_constraintStart_toEndOf="@+id/game3"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/game3"
            app:layout_constraintBottom_toBottomOf="@+id/game3" android:contentDescription="@string/game4"/>
</androidx.constraintlayout.widget.ConstraintLayout>