<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailFragment" android:id="@+id/frameLayoutDetail"
                                                   android:background="@android:color/darker_gray">
    <TextView
            android:text="@string/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="30sp"
            android:textColor="@android:color/holo_blue_light" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" tools:src="@tools:sample/avatars"
            android:id="@+id/game" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/info"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:contentDescription="@string/game"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTitle"
            android:layout_marginTop="16dp" app:layout_constraintStart_toEndOf="@+id/game"
            app:layout_constraintTop_toTopOf="@+id/game"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp" android:text="@string/name"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeTitle"
            app:layout_constraintTop_toBottomOf="@+id/nameTitle"
            app:layout_constraintBottom_toTopOf="@+id/nb_playersTitle" app:layout_constraintStart_toStartOf="@+id/nameTitle"
            android:text="@string/type" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nb_playersTitle"
            app:layout_constraintTop_toBottomOf="@+id/typeTitle"
            app:layout_constraintBottom_toTopOf="@+id/yearTitle" app:layout_constraintStart_toStartOf="@+id/typeTitle"
            android:text="@string/nb_players" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearTitle"
            app:layout_constraintTop_toBottomOf="@+id/nb_playersTitle"
            app:layout_constraintBottom_toTopOf="@+id/more" app:layout_constraintStart_toStartOf="@+id/nb_playersTitle"
            android:text="@string/year" android:textStyle="bold"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/details" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/more" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/game" app:layout_constraintHorizontal_bias="0.49"/>
    <Button
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/more" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="200dp"
            app:layout_constraintTop_toBottomOf="@+id/yearTitle" app:layout_constraintHorizontal_bias="0.496"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name" app:layout_constraintStart_toEndOf="@+id/nameTitle"
            app:layout_constraintTop_toTopOf="@+id/nameTitle" app:layout_constraintBottom_toBottomOf="@+id/nameTitle"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/type"
            app:layout_constraintTop_toTopOf="@+id/typeTitle" app:layout_constraintBottom_toBottomOf="@+id/typeTitle"
            app:layout_constraintStart_toEndOf="@+id/typeTitle"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nb_players"
            app:layout_constraintTop_toBottomOf="@+id/type"
            app:layout_constraintBottom_toBottomOf="@+id/nb_playersTitle"
            app:layout_constraintStart_toEndOf="@+id/nb_playersTitle"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/year"
            app:layout_constraintTop_toTopOf="@+id/yearTitle" app:layout_constraintBottom_toBottomOf="@+id/yearTitle"
            app:layout_constraintStart_toEndOf="@+id/yearTitle" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>